[gd_scene load_steps=3 format=3 uid="uid://e7oq2abndy2r"]

[ext_resource type="Script" path="res://addons/godot-component-generator/ComponentView/component_vew.gd" id="1_fjbht"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dtev4"]
bg_color = Color(0.14902, 0.14902, 0.14902, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0901961, 0.0980392, 0.109804, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="ComponentVew" type="PanelContainer"]
custom_minimum_size = Vector2(480, 260)
scale = Vector2(1.00113, 1)
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_dtev4")
script = ExtResource("1_fjbht")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2

[node name="LblName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "RandomAudioStream"
clip_text = true

[node name="LblPath" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_font_sizes/font_size = 12
text = "user/test_user/gd_components/random_audio_stream_player"
clip_text = true

[node name="LblDescription" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
text = "This is a test description that will be shown in the main panel. Test"
autowrap_mode = 2
clip_text = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
